--- a/Hobee/src/main/webapp/resources/css/member/editlnfo.css
+++ b/Hobee/src/main/webapp/resources/css/member/editlnfo.css
@@ -14,6 +14,7 @@ body {
   background-color: #f8f9fa;
 }
 
+	
 /* ===============================
    ✅ 메인 레이아웃
    =============================== */
@@ -282,6 +283,7 @@ main {
     width: 70px;
     height: 70px;
     font-size: 35px;
+    border-radius: 50%;
   }
   
   .profile-info p:first-child {
@@ -376,4 +378,5 @@ main {
     padding: 13px;
     font-size: 14px;
   }
+
 }
