마이페이지 css 오류 수정

--- a/Hobee/src/main/webapp/resources/css/member/mypage.css
+++ b/Hobee/src/main/webapp/resources/css/member/mypage.css
@@ -3,9 +3,11 @@
 /* ===============================
    ✅ 레이아웃 구조
    =============================== */
-.layout {
-  display: flex;
-  min-height: calc(100vh - 80px); /* 헤더 높이 제외 */
+   
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* ===============================
