--- a/Hobee/src/main/webapp/resources/css/member/payment.css
+++ b/Hobee/src/main/webapp/resources/css/member/payment.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
 
 /* 기본 레이아웃 */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Pretendard', sans-serif;
+}
+
+
 .main-content {
     margin-left: 240px;
     padding: 40px 30px 60px;
